--- a/PROG6221_Part3_St10071737/PROG6221_Part3_St10071737.csproj
+++ b/PROG6221_Part3_St10071737/PROG6221_Part3_St10071737.csproj
@@ -104,6 +104,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MVVM\Model\RecipeListModel.cs" />
     <Compile Include="MVVM\ViewModel\AddRecipeViewModel.cs" />
     <Compile Include="MVVM\ViewModel\HomeViewModel.cs" />
     <Compile Include="MVVM\ViewModel\MainViewModel.cs" />
@@ -144,7 +145,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Fonts\" />
-    <Folder Include="MVVM\Model\" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Exit.png" />
